XP Compiler ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
Git commit: ?????

Heads up!
~~~~~~~~~
- Version now detached from framework - XP compiler v1.9.0 will be the 
  correct version for XP Framework v5.9.0
  (friebe)

RFCs
~~~~
- Implemented RFC #0260: XP 5.9 as default branch
  (friebe)

Features
~~~~~~~~
- Added support for "self" keyword in parameters and return types
  (friebe)


Version 1.2.0, released 2012-09-30
----------------------------------
Git commit: 27e33c1b3a01127a4398f2e9a3884b6426bf4cff

RFCs
~~~~
- Implemented RFC #0218: Parameter annotations
  http://news.planet-xp.net/article/480/2012/09/30/
  (friebe)

Bugfixes
~~~~~~~~
- Refrain from resolving constants. Fixes issue #20 "the hard way" - the 
  optimization is removed all the way
  (friebe)

Features
~~~~~~~~
- Splitted compiler.ini and reorganize into src/test/resources
  # See xp-framework/xp-framework#160
  (friebe)


Version 1.1.2, released 2012-07-09
----------------------------------
Git commit: cb0de5af90e454a579ce2b92987f0de1dfaf6713

Bugfixes
~~~~~~~~
- Fixed indexers and operators inheritance
  (friebe)

Features
~~~~~~~~
- Added Maven pom
  (mrosoiu)


Version 1.1.1, released 2012-06-08
----------------------------------
Git commit: f8a8a1ba97b68757117781bc0df6365af0940f20

Features
~~~~~~~~
- Added tests for hex addition oddities
  http://me.veekun.com/blog/2012/04/09/php-a-fractal-of-bad-design/#numbers
  See also PHP Bug #61095 and PHP Bug #61095
  (friebe)
- Added support for hexadecimal escape sequences
  # \x   hex-digit   hex-digitopt   hex-digitopt   hex-digitopt
  (friebe)
- Added support for exponent and octal number notation
  (friebe)

Version 1.1.0, released 2012-02-26
----------------------------------
Git commit: 63f95caf93989d287ca357bb1af89dbf5b19e48f

RFCs
~~~~
- RFC #0218: Added syntactical support for annotations with target
  (friebe)

Bugfixes